plugins {
    id 'java'
    // 'apply false' : 플러그인을 지금 적용하지 않고, 버전만 중앙에서 관리하겠다는 의미
    id 'org.springframework.boot' version '3.5.4' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

group = 'mpl-team2'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
// 코드 중복 방지
configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
    developmentOnly
}

//저장소 설정을 루트 프로젝트를 포함한 모든 프로젝트에 적용되도록 allprojects 블록으로 옮김
allprojects {
    repositories {
        mavenCentral()
    }
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'

    dependencyManagement {
        imports {
            mavenBom "io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1"
        }
    }

    dependencies {
        //캐시
        implementation 'org.springframework.boot:spring-boot-starter-cache'
        //카페인
        implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'
        //카프카
        implementation 'org.springframework.kafka:spring-kafka'
        //레디스
        implementation 'org.springframework.boot:spring-boot-starter-data-redis'
        //RabbitMQ
        implementation 'org.springframework.boot:spring-boot-starter-amqp'
        //파일 인풋 아웃풋 유틸 라이브러리
        implementation 'commons-io:commons-io:2.16.1'

        //직렬화, 역직렬화
        implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

        //Swagger UI
        //3.5.x 버전은 2.7.0 이상부터 됨
        implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'

        //jwt 토큰
        implementation 'com.nimbusds:nimbus-jose-jwt:10.3'
        implementation 'org.springframework.boot:spring-boot-starter-security'

        //db
        runtimeOnly 'com.h2database:h2'
        runtimeOnly 'org.postgresql:postgresql'

        //웹 소캣
        implementation 'org.springframework.boot:spring-boot-starter-websocket'

        //AWS SDK 설치
        implementation 'software.amazon.awssdk:s3'

        //아마존 Ses 이메일 시스템
        implementation 'software.amazon.awssdk:ses'

        //비동기 작업을 위한 micrometer 설치
        implementation 'org.springframework.retry:spring-retry'
        implementation 'io.micrometer:context-propagation:1.1.3'

        //웹 클라이언트
        implementation 'org.springframework.boot:spring-boot-starter-webflux'

        // QueryDSL
        implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'

        implementation 'org.springframework.boot:spring-boot-starter-actuator'
        implementation 'org.springframework.boot:spring-boot-starter-batch'
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        implementation 'org.springframework.boot:spring-boot-starter-mail'
        compileOnly 'org.projectlombok:lombok'
        // MapStruct for DTO mapping
        implementation 'org.mapstruct:mapstruct:1.5.5.Final'
        implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'

        annotationProcessor 'org.projectlombok:lombok'
        annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
        annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'

        annotationProcessor 'com.querydsl:querydsl-apt:5.0.0:jakarta'
        annotationProcessor "jakarta.annotation:jakarta.annotation-api"
        annotationProcessor "jakarta.persistence:jakarta.persistence-api"

        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testImplementation 'org.springframework.batch:spring-batch-test'
        testImplementation 'org.springframework.kafka:spring-kafka-test'
        testImplementation 'org.springframework.security:spring-security-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
        // 비동기 테스트 용
        testImplementation 'org.awaitility:awaitility:4.3.0'
        // 통합 테스트용 Testcontainers
        testImplementation 'org.testcontainers:junit-jupiter:1.19.1'
        testImplementation 'org.testcontainers:testcontainers:1.19.1'
        testCompileOnly 'org.projectlombok:lombok'
        testAnnotationProcessor 'org.projectlombok:lombok'

        tasks.named('test') {
            useJUnitPlatform()
        }
    }
}